# gen/http/images/server/encode_decode.go
@@ -109,26 +109,31 @@ func EncodeCreateError(encoder func(context.Context, http.ResponseWriter) goahtt
 // a value of type *images.Image.
 func marshalImagesImageToImageResponse(v *images.Image) *ImageResponse {
 	res := &ImageResponse{
-		CrName:              v.CrName,
-		Name:                v.Name,
-		Image:               v.Image,
-		Description:         v.Description,
-		Category:            v.Category,
-		DefaultPort:         v.DefaultPort,
-		DefaultPath:         v.DefaultPath,
-		Icon:                v.Icon,
-		DefaultUID:          v.DefaultUID,
-		DefaultSharedMemory: v.DefaultSharedMemory,
-		Privileged:          v.Privileged,
-		HomepageURL:         v.HomepageURL,
-		SourceURL:           v.SourceURL,
-		ImageHomepageURL:    v.ImageHomepageURL,
-		DefaultUser:         v.DefaultUser,
-		DefaultPassword:     v.DefaultPassword,
-		DefaultCloudInit:    v.DefaultCloudInit,
-		DefaultUserData:     v.DefaultUserData,
-		DefaultHomedir:      v.DefaultHomedir,
-		DefaultShell:        v.DefaultShell,
+		CrName:                 v.CrName,
+		Name:                   v.Name,
+		Image:                  v.Image,
+		Description:            v.Description,
+		Category:               v.Category,
+		DefaultPort:            v.DefaultPort,
+		DefaultPath:            v.DefaultPath,
+		Icon:                   v.Icon,
+		DefaultUID:             v.DefaultUID,
+		DefaultSharedMemory:    v.DefaultSharedMemory,
+		Privileged:             v.Privileged,
+		HomepageURL:            v.HomepageURL,
+		SourceURL:              v.SourceURL,
+		ImageHomepageURL:       v.ImageHomepageURL,
+		DefaultUser:            v.DefaultUser,
+		DefaultPassword:        v.DefaultPassword,
+		DefaultCloudInit:       v.DefaultCloudInit,
+		DefaultUserData:        v.DefaultUserData,
+		DefaultHomedir:         v.DefaultHomedir,
+		DefaultShell:           v.DefaultShell,
+		VMProfile:              v.VMProfile,
+		PersistentRootDisk:     v.PersistentRootDisk,
+		PersistentRootDiskSize: v.PersistentRootDiskSize,
+		MemoryLimit:            v.MemoryLimit,
+		MemoryRequest:          v.MemoryRequest,
 	}
 	if v.Tags != nil {
 		res.Tags = make([]string, len(v.Tags))
