# gen/http/workspaces/server/server.go
@@ -18,15 +18,16 @@ import (
 
 // Server lists the workspaces service endpoint HTTP handlers.
 type Server struct {
-	Mounts []*MountPoint
-	List   http.Handler
-	Get    http.Handler
-	Create http.Handler
-	Delete http.Handler
-	Start  http.Handler
-	Stop   http.Handler
-	Reset  http.Handler
-	Clone  http.Handler
+	Mounts      []*MountPoint
+	Credentials http.Handler
+	List        http.Handler
+	Get         http.Handler
+	Create      http.Handler
+	Delete      http.Handler
+	Start       http.Handler
+	Stop        http.Handler
+	Reset       http.Handler
+	Clone       http.Handler
 }
 
 // MountPoint holds information about the mounted endpoints.
@@ -56,6 +57,7 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
+			{"Credentials", "GET", "/v1/workspaces/{name}/credentials"},
 			{"List", "GET", "/v1/workspaces"},
 			{"Get", "GET", "/v1/workspaces/{name}"},
 			{"Create", "POST", "/v1/workspaces"},
@@ -65,14 +67,15 @@ func New(
 			{"Reset", "POST", "/v1/workspaces/{name}/reset"},
 			{"Clone", "POST", "/v1/workspaces/{name}/clone"},
 		},
-		List:   NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
-		Get:    NewGetHandler(e.Get, mux, decoder, encoder, errhandler, formatter),
-		Create: NewCreateHandler(e.Create, mux, decoder, encoder, errhandler, formatter),
-		Delete: NewDeleteHandler(e.Delete, mux, decoder, encoder, errhandler, formatter),
-		Start:  NewStartHandler(e.Start, mux, decoder, encoder, errhandler, formatter),
-		Stop:   NewStopHandler(e.Stop, mux, decoder, encoder, errhandler, formatter),
-		Reset:  NewResetHandler(e.Reset, mux, decoder, encoder, errhandler, formatter),
-		Clone:  NewCloneHandler(e.Clone, mux, decoder, encoder, errhandler, formatter),
+		Credentials: NewCredentialsHandler(e.Credentials, mux, decoder, encoder, errhandler, formatter),
+		List:        NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
+		Get:         NewGetHandler(e.Get, mux, decoder, encoder, errhandler, formatter),
+		Create:      NewCreateHandler(e.Create, mux, decoder, encoder, errhandler, formatter),
+		Delete:      NewDeleteHandler(e.Delete, mux, decoder, encoder, errhandler, formatter),
+		Start:       NewStartHandler(e.Start, mux, decoder, encoder, errhandler, formatter),
+		Stop:        NewStopHandler(e.Stop, mux, decoder, encoder, errhandler, formatter),
+		Reset:       NewResetHandler(e.Reset, mux, decoder, encoder, errhandler, formatter),
+		Clone:       NewCloneHandler(e.Clone, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
@@ -81,6 +84,7 @@ func (s *Server) Service() string { return "workspaces" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
+	s.Credentials = m(s.Credentials)
 	s.List = m(s.List)
 	s.Get = m(s.Get)
 	s.Create = m(s.Create)
@@ -96,6 +100,7 @@ func (s *Server) MethodNames() []string { return workspaces.MethodNames[:] }
 
 // Mount configures the mux to serve the workspaces endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
+	MountCredentialsHandler(mux, h.Credentials)
 	MountListHandler(mux, h.List)
 	MountGetHandler(mux, h.Get)
 	MountCreateHandler(mux, h.Create)
@@ -109,6 +114,59 @@ func Mount(mux goahttp.Muxer, h *Server) {
 // Mount configures the mux to serve the workspaces endpoints.
 func (s *Server) Mount(mux goahttp.Muxer) {
 	Mount(mux, s)
+}
+
+// MountCredentialsHandler configures the mux to serve the "workspaces" service
+// "credentials" endpoint.
+func MountCredentialsHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/v1/workspaces/{name}/credentials", f)
+}
+
+// NewCredentialsHandler creates a HTTP handler which loads the HTTP request
+// and calls the "workspaces" service "credentials" endpoint.
+func NewCredentialsHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeCredentialsRequest(mux, decoder)
+		encodeResponse = EncodeCredentialsResponse(encoder)
+		encodeError    = EncodeCredentialsError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "credentials")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "workspaces")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			if errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+		}
+	})
 }
 
 // MountListHandler configures the mux to serve the "workspaces" service "list"
